kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: imdbsearch-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: k8s.imdbsearch.space
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: gomovie-service
              port:
                number: 80
        - path: /search
          pathType: Prefix
          backend:
            service:
              name: gomovie-backend-service
              port:
                number: 80
        - path: /check_ttl
          pathType: Prefix
          backend:
            service:
              name: gomovie-backend-service
              port:
                number: 80
        - path: /movie-details
          pathType: Prefix
          backend:
            service:
              name: gomovie-backend-service
              port:
                number: 80
        - path: /pod
          pathType: Prefix
          backend:
            service:
              name: gomovie-backend-service
              port:
                number: 80
